--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gl-matrix": "^3.4.4",
+    "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.17.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-leaflet": "^5.0.0",
+    "react-map-gl": "^8.1.0",
     "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
