--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.17.0",
     "pg": "^8.11.0",
+    "bcryptjs": "^2.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
