--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "gl-matrix": "^3.4.4",
+    "jsonwebtoken": "^9.0.0",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.17.0",
+    "node-fetch": "^3.3.2",
     "pg": "^8.11.0",
-    "bcryptjs": "^2.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
